--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="image-box">
       <p id="enhanced-placeholder">Enhanced image will appear here</p>
       <img id="enhanced-image" style="display: none;" />
-      <a id="download-link" href="#" download="enhanced-image.jpg" style="display:none;">
+      <button id="download-btn" style="display: none;">Download Enhanced Image</button>
         <button>Download Enhanced Image</button>
       </a>
     </div>
