--- a/index.html
+++ b/index.html
@@ -61,12 +61,24 @@
   </div>
 
   <div class="ad-space">ADVERTISEMENT 2</div>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '9974cdcdd3e20268f9b25c06612c5228',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/9974cdcdd3e20268f9b25c06612c5228/invoke.js"></script>
+  
   <div class="description">
     <h3>About this Tool:</h3>
     <p>This AI Image Enhancer improves your image quality using PicsArt API. Just upload your image, select format and scale, and enhance in seconds.</p>
   </div>
 
   <script src="script.js"></script>
+
+  
 </body>
 </html>
