--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <h1>AI Image Enhancer</h1>
-
+<div class="description">
+    <h3>About this Tool:</h3>
+    <p>This AI Image Enhancer improves your image quality using PicsArt API. Just upload your image, select format and scale, and enhance in seconds.</p>
+  </div>
   <div class="upload-container">
     <label for="image-upload" class="file-input-label" id="drop-area">
       <p>Drag & drop your image here or click to browse</p>
@@ -72,10 +75,11 @@
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/9974cdcdd3e20268f9b25c06612c5228/invoke.js"></script>
   
-  <div class="description">
-    <h3>About this Tool:</h3>
-    <p>This AI Image Enhancer improves your image quality using PicsArt API. Just upload your image, select format and scale, and enhance in seconds.</p>
-  </div>
+  <footer style="text-align: center; padding: 20px; background-color: #f1f1f1; margin-top: 40px; border-top: 1px solid #ddd;">
+  <p><strong>AI Image Enhancer</strong> is a free online tool to upscale and enhance your photos using advanced AI technology. Improve the quality of your images in seconds — no software required!</p>
+  <p>Made with ❤️ by <a href="https://github.com/aitechnocrafts" target="_blank" style="color: #3498db;">Aitechnocrafts</a></p>
+</footer>
+
 
   <script src="script.js"></script>
 
