--- a/index.html
+++ b/index.html
@@ -47,8 +47,18 @@
     </div>
   </div>
 
-  <div class="ad-space">ADVERTISEMENT 1</div>
-
+  <div class="ad-space"></div>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '10b3c689265e32a7f2ba1e17ac6cb366',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/10b3c689265e32a7f2ba1e17ac6cb366/invoke.js"></script>
+	
   <div class="preview-container">
     <div class="image-box">
       <p id="original-placeholder">Original image will appear here</p>
@@ -63,7 +73,7 @@
     </div>
   </div>
 
-  <div class="ad-space">ADVERTISEMENT 2</div>
+  <div class="ad-space"></div>
 <script type="text/javascript">
 	atOptions = {
 		'key' : '9974cdcdd3e20268f9b25c06612c5228',
