--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <input type="email" placeholder="Email Address" required>
                 <input type="password" placeholder="Password" required>
                 <!-- This button will directly redirect to your tool -->
-                <a href="https://aitechnocrafts.github.io/Ai-Image-Enhancer" class="login-button">Login & Continue</a>
+                <a href="./tool.html" class="login-button">Login & Continue</a>
             </form>
         </div>
     </div>
