--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Page Title & Icon -->
     <title>AI Image Enhancer - Upscale Photos for Free</title>
-    <link rel="icon" href="https://i.ibb.co/68ZJc4T/logo.png" type="image/png">
+    <link rel="icon" href="https://AiTechnocrafts/Ai-Image-Enhancer/blob/main/logo.png" type="logo.png">
 
     <!-- SEO Meta Tags (Search Engine Optimization) -->
     <meta name="description" content="Enhance your photos with AI. Upscale low-resolution images, increase quality, and sharpen details for free with AI Technocrafts' powerful online tool.">
