--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 		'width' : 320,
 		'params' : {}
 	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/10b3c689265e32a7f2ba1e17ac6cb366/invoke.js"></script>
-    
+
     <!-- SEO Meta Tags -->
     <meta name="description" content="Enhance your photos with AI. Upscale low-resolution images, increase quality, and sharpen details for free with AI Technocrafts' powerful online tool.">
     <meta name="keywords" content="ai image enhancer, photo upscaler, increase image resolution, free photo enhancer, upscale photo, enhance image quality, ai photo editor, image sharpener, AI Technocrafts">
@@ -95,7 +93,18 @@
             <!-- Blog content (waisa hi rahega) -->
         </section>
     </main>
-
+	    
+<script type="text/javascript">
+	atOptions = {
+		'key' : '10b3c689265e32a7f2ba1e17ac6cb366',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/10b3c689265e32a7f2ba1e17ac6cb366/invoke.js"></script>
+	
     <footer class="footer">
         <!-- Footer content (waisa hi rahega) -->
     </footer>
@@ -182,8 +191,5 @@
             }
         });
     </script>
-    <script async="async" data-cfasync="false" src="//pl26953775.profitableratecpm.com/e54c93f45e444a48f6cc1cbbd07d09d2/invoke.js"></script>
-<div id="container-e54c93f45e444a48f6cc1cbbd07d09d2"></div>
-    </div>
 </body>
 </html>
