--- a/tool.html
+++ b/tool.html
@@ -74,16 +74,8 @@
   </div>
 
   <div class="ad-space"></div>
-<script type="text/javascript">
-	atOptions = {
-		'key' : '9974cdcdd3e20268f9b25c06612c5228',
-		'format' : 'iframe',
-		'height' : 300,
-		'width' : 160,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/9974cdcdd3e20268f9b25c06612c5228/invoke.js"></script>
+<script async="async" data-cfasync="false" src="//pl26953775.profitableratecpm.com/e54c93f45e444a48f6cc1cbbd07d09d2/invoke.js"></script>
+<div id="container-e54c93f45e444a48f6cc1cbbd07d09d2"></div>
   
   <footer style="text-align: center; padding: 20px; background-color: #f1f1f1; margin-top: 40px; border-top: 1px solid #ddd;">
   <p><strong>AI Image Enhancer</strong> is a free online tool to upscale and enhance your photos using advanced AI technology. Improve the quality of your images in seconds — no software required!</p>
