--- a/tool.html
+++ b/tool.html
@@ -68,15 +68,15 @@
       <p id="enhanced-placeholder">Enhanced image will appear here</p>
       <img id="enhanced-image" style="display: none;" />
       <a id="download-link" href="#" download="enhanced-image.jpg" style="display:none;">
-        <button id="download-btn">Download Enhanced Image</button>
+        <button id="download-btn">Preview Enhanced Image</button>
       </a>
     </div>
   </div>
-
+<a href="/" class="cta-button">← Back to Home</a>
   <div class="ad-space"></div>
 <script async="async" data-cfasync="false" src="//pl26953775.profitableratecpm.com/e54c93f45e444a48f6cc1cbbd07d09d2/invoke.js"></script>
 <div id="container-e54c93f45e444a48f6cc1cbbd07d09d2"></div>
-  <a href="/" class="cta-button">← Back to Home</a>
+  
   <footer style="text-align: center; padding: 20px; background-color: #f1f1f1; margin-top: 40px; border-top: 1px solid #ddd;">
   <p><strong>AI Image Enhancer</strong> is a free online tool to upscale and enhance your photos using advanced AI technology. Improve the quality of your images in seconds — no software required!</p>
   <p>Made with ❤️ by <a href="https://github.com/aitechnocrafts" target="_blank" style="color: #3498db;">Aitechnocrafts</a></p>
