--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    
+    <!-- ✅ Note Message -->
+<div style="background-color: #fff8e1; color: #333; border-left: 6px solid #ffc107; padding: 15px 20px; margin: 30px auto; max-width: 800px; border-radius: 8px; font-size: 1rem;">
+  <strong>Note:</strong> Sometimes our server slows down due to high traffic, so don't leave the website, try two to three times and it will definitely start working.<br><br>
+  <em>"Our success is waiting for your cooperation." 🙏🏽</em>
+</div>
+
     <!-- CSS Styles -->
     <style>
         :root {
